--- a/Varner_OOP/Varner_OOP.csproj
+++ b/Varner_OOP/Varner_OOP.csproj
@@ -46,14 +46,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="HV_Form_2019_01_15.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="HV_Form_2019_01_15.Designer.cs">
+      <DependentUpon>HV_Form_2019_01_15.cs</DependentUpon>
+    </Compile>
+    <Compile Include="HV_Form_Main.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HV_Form_Main.Designer.cs">
+      <DependentUpon>HV_Form_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="HV_Form_2019_01_15.resx">
+      <DependentUpon>HV_Form_2019_01_15.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="HV_Form_Main.resx">
+      <DependentUpon>HV_Form_Main.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
